# ibig-ext

./: Cargo.toml  README.md
benches/: fact_rho.rs  fact_rhom1.rs  jacobi.rs  powmod.rs  primality.rs  prime_gen.rs
examples/: fact_rho.rs  fact_rhom1.rs  jacobi.rs  log.rs  powmod.rs  primality_fermat.rs  primality_mr.rs  primality_ss.rs  prime_gen.rs  sqrt.rs
src/: lib.rs
src/factorization/: mod.rs  rho.rs  rhom1.rs
src/jacobi/: jacobi.rs  mod.rs  result.rs  tests.rs
src/jacobi/benches/: jacobi.rs
src/jacobi/examples/: main.rs
src/logarithm/: mod.rs  rho.rs  tests.rs
src/pollard_fact/: rhom1.rs
src/pollard_fact/benches/: rho.rs  rhom1.rs
src/pollard_fact/examples/: rho.rs  rhom1.rs
src/pollard_log/: rho.rs  tests.rs
src/pollard_log/examples/: main.rs
src/powmod/: mod.rs  powmod.rs  tests.rs
src/powmod/benches/: main.rs
src/powmod/examples/: ibig.rs  ubig.rs
src/primality/: mod.rs
src/primality/benches/: main.rs
src/primality/examples/: fermat.rs  mr.rs  ss.rs
src/primality/fermat/: alg.rs  mod.rs  tests.rs
src/primality/mr/: alg.rs  mod.rs  tests.rs
src/primality/ss/: alg.rs  mod.rs  tests.rs
src/prime_gen/: mod.rs
src/prime_gen/benches/: gen.rs  sized_ubig.rs
src/prime_gen/examples/: gen.rs
src/sqrt/: mod.rs  sqrt.rs  sqrtmod.rs
src/sqrt/benches/: bin_sqrt.rs
src/sqrt/examples/: main.rs
