[package]
name = "ibig-ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ibig = "0.3.6"
num-traits = { version = "0.2.18", optional = true }
rand = { version = "0.8.5", optional = true }

[features]
rand = ["dep:rand"]
num-traits = ["dep:num-traits"]
